clang/test/BSC/Positive/Driver/rewrite-bsc/Macro/rewrite_bsc_with_macro_3/rewrite_bsc_with_macro_3.cbs
// RUN: %clang -rewrite-bsc %s -o %t-rw.c
// RUN: %clang %t-rw.c -I %S -o %t-rw.output
// RUN: %t-rw.output

#include "rewrite_bsc_with_macro_3.h"

Bool a = false;

int main() {
  Bool x = a;
  return 0;
}